[gd_scene load_steps=3 format=3 uid="uid://cys7n0lp34ulf"]

[ext_resource type="Script" path="res://scripts/UI/pause.gd" id="1_5mefj"]
[ext_resource type="FontFile" uid="uid://dmgtjvyjyw1nb" path="res://resources/UI/Habbo.ttf" id="1_j5cff"]

[node name="Pause" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_5mefj")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -109.0
offset_top = -70.0
offset_right = 109.0
offset_bottom = 70.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 10

[node name="ButtonResume" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_j5cff")
theme_override_font_sizes/font_size = 36
text = "Resume
"

[node name="ButtonSettings" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_j5cff")
theme_override_font_sizes/font_size = 36
text = "Settings"

[node name="ButtonExit" type="Button" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("1_j5cff")
theme_override_font_sizes/font_size = 36
text = "Main Menu"

[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonResume" to="." method="on_resume_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonSettings" to="." method="on_button_settings_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/ButtonExit" to="." method="on_menu_button_pressed"]
